unpackaged/main/default/objects/Extension_Request_CAPA__c/Extension_Request_CAPA__c.object-meta.xml
<CustomObject>
    <label>Extension Request CAPA</label>
    <nameField>
        <displayFormat>ER-CAPA-{00000}</displayFormat>
        <label>ER-CAPA No</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Extension Requests CAPA</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>