unpackaged/main/default/objects/Extension_Request_CAPA__c/fields/CAPA__c.field-meta.xml
<CustomField>
        <fullName>CAPA__c</fullName>
        <label>CAPA</label>
        <referenceTo>CMPL123QMS__CAPA__c</referenceTo>
        <relationshipLabel>Extension Requests CAPA</relationshipLabel>
        <relationshipName>Extension_Requests_CAPA</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </CustomField>