unpackaged/main/default/objects/Extension_Request_CAPA__c/fields/Proposed_Due_Date__c.field-meta.xml
<CustomField>
        <fullName>Proposed_Due_Date__c</fullName>
        <label>Proposed Due Date</label>
        <type>Date</type>
    </CustomField>