unpackaged/main/default/objects/Extension_Request_CAPA__c/fields/TestDueDateFormulaEndo__c.field-meta.xml
<CustomField>
        <fullName>TestDueDateFormulaEndo__c</fullName>
        <formula>IF(  ISBLANK(Current_Due_Date__c)  , CAPA__r.Due_Date__c, Current_Due_Date__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>TestDueDateFormulaEndo</label>
        <type>Date</type>
    </CustomField>